tests/sksl/errors/PrototypeInFuncBody.glsl
### Compilation failed:

error: 2: expected ';', but found '('
    float x();
           ^
1 error
